--- a/Повторяем основные конструкции языка Python 🐍/Часть 1/Programming (5)/task-info.yaml
+++ b/Повторяем основные конструкции языка Python 🐍/Часть 1/Programming (5)/task-info.yaml
@@ -5,5 +5,8 @@ files:
   visible: true
   text: '# put your python code here'
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: Thu, 14 Jul 2022 11:06:38 UTC
 record: -1
